--- a/Modern Climate.Rmd
+++ b/Modern Climate.Rmd
@@ -62,19 +62,6 @@ clim_class <- mclapply(1:ncell(prec), koeppen_map, mc.cores = detectCores()) %>%
   setValues(prec[[1]], .)
 ```
 
-```{r}
-class_names <- c(
-  BSh = 'Hot semi-arid',
-  BSk = 'Cold semi-arid',
-  BWh = 'Hot desert',
-  BWk = 'Cold desrt',
-  Csa = 'Hot-summer Mediterranean',
-  Csb = 'Warm-summer Mediterranean',
-  Dsb = 'Warm, dry-summer contiental',
-  Dsc = 'Dry-summer subarctic'
-)
-```
-
 
 ```{r}
 clim_class %>% 
@@ -93,5 +80,52 @@ clim_class %>%
   scale_fill_discrete(name = 'Köppen-Geiger classification') +
   theme_void() +
   coord_quickmap()
+```
+
+# Land Use
+```{r}
+
+recode_factor()
+
+LC2012 <- raster('LC_5min_global_2012.tif') %>%
+  crop(bbox)  %>%
+  as.data.frame(xy = T) %>%
+  mutate(class = recode_factor(LC_5min_global_2012,
+                               `0` = 'Water',
+                               `1` = 'Evergreen Needleleaf forest',
+                               `2` = 'Evergreen Broadleaf forest',
+                               `3` = 'Deciduous Needleleaf forest',
+                               `4` = 'Deciduous Broadleaf forest',
+                               `5` = 'Mixed forest',
+                               `6` = 'Closed shrublands',
+                               `7` = 'Open shrublands',
+                               `8` = 'Woody savannas',
+                               `9` = 'Savannas',
+                               `10` = 'Grasslands',
+                               `11` = 'Permanent wetlands',
+                               `12` = 'Croplands',
+                               `13` = 'Urban and built-up',
+                               `14` = 'Cropland/Natural vegetation mosaic',
+                               `15` = 'Snow and ice',
+                               `16` = 'Barren or sparsely vegetated'))
+
+ggplot(LC2012, aes(x, y, fill = class)) +
+  geom_raster() +
+  theme_void() +
+  coord_quickmap()
+
+LC2001 <- raster('LC_5min_global_2001.tif') %>%
+  crop(bbox)
+
+
+plot(LC2012)
+plot(LC2001)
+LC2012
+```
+```{r}
+avhrr <- raster('AVHRR_1km_LANDCOVER_1981_1994.GLOBAL.tif') %>%
+  crop(bbox)
+
+plot(avhrr)
 ```
 
