--- a/Roman_map.Rmd
+++ b/Roman_map.Rmd
@@ -21,12 +21,6 @@ library(pleiades)
 Import SRTM basemap
 ```{r}
 bbox <- extent(-10, 20, 28, 38)
-srtm <- raster('Data/SRTM_NE_250m_TIF/SRTM_NE_250m.tif') %>%
-  crop(bbox)
-
-slope <- terrain(srtm, unit = 'degrees')
-
-plot(srtm)
 ```
 
 
@@ -132,6 +126,30 @@ ggplot(aes(lon, lat)) +
 
 
 major <- settlements %>% filter(str_detect(tags, 'major=1'))
+```
+Compare to environmental covariates
+```{r}
+srtm <- raster('Data/SRTM_NE_250m_TIF/SRTM_NE_250m.tif') %>%
+  crop(bbox)
+
+slope <- terrain(srtm, opt = 'slope', unit = 'degrees')
+aspect <- terrain(srtm, opt = 'aspect', unit = 'degrees')
+TPI <- terrain(srtm, opt = 'TPI')
+TRI <- terrain(srtm, opt = 'TRI')
+roughness <- terrain(srtm, opt = 'roughness')
+hill <- hillShade(slope, aspect, 40, 270)
+
+env <- brick(c(srtm, slope, aspect, TPI, TRI, roughness))
+rm(srtm, slope, aspect, TPI, TRI, roughness)
+```
+
+```{r}
+prec <- brick('Data/CHELSA/prec.nc') %>% crop(bbox) %>% sum %>% resample(topo)
+levelplot(prec)
+
+test <- brick(c(topo, prec)) %>% raster::extract(aqueducts, df = T)
+
+qplot(x = layer, geom = 'histogram', data = test)
 ```
 
 
