--- a/PFT.Rmd
+++ b/PFT.Rmd
@@ -51,11 +51,25 @@ pft <- test %>% crop(bbox)
 
 ```{r}
 biomes <- readxl::read_excel('BIOME4-2.xls', sheet = 2) %>% 
-  dplyr::select(Lon, Lat, biome = MegaBiome00k)
+  dplyr::select(Lon, Lat, biome = MegaBiome00k) %>%
+  filter(!is.na(biome)) %>%
+  mutate(biome.int = biome %>% as.factor %>% as.numeric %>% `-`(1))
 plot(biomes$Lon,biomes$Lat)
 ```
 ```{r}
-raster::extract()
+unique(biomes$biome.int)
+dat <- raster::extract(wc, biomes[,1:2], na.rm = T, df = T) %>% cbind(biomes, .)
+
+
+mod1 <- gam(list(biome.int ~ s(bio1, bs = 'cr') + s(bio2, bs = 'cr') + s(bio3, bs = 'cr') + s(bio4, bs = 'cr') + s(bio5, bs = 'cr') + s(bio6, bs = 'cr') + s(bio7, bs = 'cr') + s(bio8, bs = 'cr') + s(bio9, bs = 'cr') + s(bio10, bs = 'cr') + s(bio11, bs = 'cr') + s(bio12, bs = 'cr') + s(bio13, bs = 'cr') + s(bio14, bs = 'cr') + s(bio15, bs = 'cr') + s(bio16, bs = 'cr') + s(bio17, bs = 'cr') + s(bio18, bs = 'cr') + s(bio19, bs = 'cr'),
+                 ~ s(bio1, bs = 'cr') + s(bio2, bs = 'cr') + s(bio3, bs = 'cr') + s(bio4, bs = 'cr') + s(bio5, bs = 'cr') + s(bio6, bs = 'cr') + s(bio7, bs = 'cr') + s(bio8, bs = 'cr') + s(bio9, bs = 'cr') + s(bio10, bs = 'cr') + s(bio11, bs = 'cr') + s(bio12, bs = 'cr') + s(bio13, bs = 'cr') + s(bio14, bs = 'cr') + s(bio15, bs = 'cr') + s(bio16, bs = 'cr') + s(bio17, bs = 'cr') + s(bio18, bs = 'cr') + s(bio19, bs = 'cr'),
+                 ~ s(bio1, bs = 'cr') + s(bio2, bs = 'cr') + s(bio3, bs = 'cr') + s(bio4, bs = 'cr') + s(bio5, bs = 'cr') + s(bio6, bs = 'cr') + s(bio7, bs = 'cr') + s(bio8, bs = 'cr') + s(bio9, bs = 'cr') + s(bio10, bs = 'cr') + s(bio11, bs = 'cr') + s(bio12, bs = 'cr') + s(bio13, bs = 'cr') + s(bio14, bs = 'cr') + s(bio15, bs = 'cr') + s(bio16, bs = 'cr') + s(bio17, bs = 'cr') + s(bio18, bs = 'cr') + s(bio19, bs = 'cr'),
+                 ~ s(bio1, bs = 'cr') + s(bio2, bs = 'cr') + s(bio3, bs = 'cr') + s(bio4, bs = 'cr') + s(bio5, bs = 'cr') + s(bio6, bs = 'cr') + s(bio7, bs = 'cr') + s(bio8, bs = 'cr') + s(bio9, bs = 'cr') + s(bio10, bs = 'cr') + s(bio11, bs = 'cr') + s(bio12, bs = 'cr') + s(bio13, bs = 'cr') + s(bio14, bs = 'cr') + s(bio15, bs = 'cr') + s(bio16, bs = 'cr') + s(bio17, bs = 'cr') + s(bio18, bs = 'cr') + s(bio19, bs = 'cr'),
+                 ~ s(bio1, bs = 'cr') + s(bio2, bs = 'cr') + s(bio3, bs = 'cr') + s(bio4, bs = 'cr') + s(bio5, bs = 'cr') + s(bio6, bs = 'cr') + s(bio7, bs = 'cr') + s(bio8, bs = 'cr') + s(bio9, bs = 'cr') + s(bio10, bs = 'cr') + s(bio11, bs = 'cr') + s(bio12, bs = 'cr') + s(bio13, bs = 'cr') + s(bio14, bs = 'cr') + s(bio15, bs = 'cr') + s(bio16, bs = 'cr') + s(bio17, bs = 'cr') + s(bio18, bs = 'cr') + s(bio19, bs = 'cr'),
+                 ~ s(bio1, bs = 'cr') + s(bio2, bs = 'cr') + s(bio3, bs = 'cr') + s(bio4, bs = 'cr') + s(bio5, bs = 'cr') + s(bio6, bs = 'cr') + s(bio7, bs = 'cr') + s(bio8, bs = 'cr') + s(bio9, bs = 'cr') + s(bio10, bs = 'cr') + s(bio11, bs = 'cr') + s(bio12, bs = 'cr') + s(bio13, bs = 'cr') + s(bio14, bs = 'cr') + s(bio15, bs = 'cr') + s(bio16, bs = 'cr') + s(bio17, bs = 'cr') + s(bio18, bs = 'cr') + s(bio19, bs = 'cr'),
+                 ~ s(bio1, bs = 'cr') + s(bio2, bs = 'cr') + s(bio3, bs = 'cr') + s(bio4, bs = 'cr') + s(bio5, bs = 'cr') + s(bio6, bs = 'cr') + s(bio7, bs = 'cr') + s(bio8, bs = 'cr') + s(bio9, bs = 'cr') + s(bio10, bs = 'cr') + s(bio11, bs = 'cr') + s(bio12, bs = 'cr') + s(bio13, bs = 'cr') + s(bio14, bs = 'cr') + s(bio15, bs = 'cr') + s(bio16, bs = 'cr') + s(bio17, bs = 'cr') + s(bio18, bs = 'cr') + s(bio19, bs = 'cr'),
+                 ~ s(bio1, bs = 'cr') + s(bio2, bs = 'cr') + s(bio3, bs = 'cr') + s(bio4, bs = 'cr') + s(bio5, bs = 'cr') + s(bio6, bs = 'cr') + s(bio7, bs = 'cr') + s(bio8, bs = 'cr') + s(bio9, bs = 'cr') + s(bio10, bs = 'cr') + s(bio11, bs = 'cr') + s(bio12, bs = 'cr') + s(bio13, bs = 'cr') + s(bio14, bs = 'cr') + s(bio15, bs = 'cr') + s(bio16, bs = 'cr') + s(bio17, bs = 'cr') + s(bio18, bs = 'cr') + s(bio19, bs = 'cr')), 
+            family = multinom(K = 8), data = dat, select = T)
 ```
 
 ```{r}
